# bc-bench

./: .gitignore  README.md  data.csv  pyproject.toml
assets/sample_data/: bc-bench.json
bc_bench/: __init__.py  cli.py  types.py
bc_bench/commands/: curate.py  evaluate.py  generate.py
bc_bench/datasets/: __init__.py  bc_bench.py
bc_bench/metrics/: __init__.py  base.py  latency.py  mrr.py  ndcg.py  precision.py  recall.py
bc_bench/reporting/: terminal.py
scripts/: generate_synthetic_benchmark.py
tests/: test_cli.py  test_commands.py  test_datasets.py  test_main.py  test_metrics.py  test_reporting.py  test_types.py
